<?xml version="1.0"?>
<package format="2">
  <name>simple_pos_controller</name>
  <version>0.0.0</version>
  <description>The simple_pos_controller package</description>
  <maintainer email="lucien@todo.todo">lucien</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="lucienp@live.com.au">Lucien Morey</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
